Update Valentine's message in index.html

--- a/index.html
+++ b/index.html
@@ -382,20 +382,29 @@ function unlock(){
   confettiExplosion();
 }
 
-const text=`Hi love… 💖
+const text=`Dear handsome, or should I say Psalms 45:2
 
-Kahit gaano kalayo ang pagitan natin,
-ikaw pa rin yung unang naiisip ko paggising
-at huling naiisip ko bago matulog.
+Happy Valentine's Day! 
 
-Distance can't touch what I feel for you.
+I just want to say that, I'm glad I've met you, again, after some months na hindi tayo nagkamustahan or talked, lam mo naman ung dahilan ba't ako lumayo haha. I hope this time, iba na, let's forget the past and have a fresh start. 
 
-And one day,
-hindi na screen ang hahawakan ko…
+Thankyou for the patience you have for me. Thankyou for the love you're giving me also. 
 
-ikaw na.
+This time I don't want to rush things with you, yes I like you, but, let's have some time to get to know each other, before we enter a serious relationship. 
 
-Happy Valentine's Day! 💝
+I hope you agree with me baby, but that doesn't mean na mag iiba ung trato ko sayo, noo, never, walang mag babago, I hope that you can wait for that right time.
+
+Don't worry my man di ako mawawala, unless matigok HAHAHAHA jok lang, kidding aside tho, I'll always be here.
+
+Hey baby, please don't be insecure or shy towards me, you're so pogi kaya, and seriously I'm not joking or pretending my compliments about you, they're all true, and yun ang nakikita ko.
+
+I hope you don't change the person I'm meeting rn, baka sa pagtagal ng panahon, mag iba kna ah HAHA, ediwla itigil natin to HAHAHA, but if you'll change for the best version of yourself then, goww support kita and I'll guide you there. 
+
+Stay handsome darling, be independent and stay kind, sweet, and be honest/open sakin, I don't want you to hide secrets from me ok? lalong lumalala ung trust issues ko e HAHA, kahit ung jokes mo, minsan nag dududa na ko, if you're lying or not. Btw baby, please, less laro, more studies, if I can do it, you can too.
+
+I love you so much handsome.
+
+Sincerely, Your Lady 💖
 `;
 
 function typeMessage(){
